# RaftEval

./: .gitignore  DataBase.xlsx  README.md  batch_evaluation_2025-06-17T09-52-11.jsonl  batch_evaluation_2025-06-18T00-16-06.jsonl  output.xlsx  pyproject.toml  requirements.txt
raft_eval/: cli.py
raft_eval/data_utils/: loaders.py
raft_eval/evaluation_runner/: evaluator.py  metrics_registry.py
raft_eval/logging_utils/: logger.py
raft_eval/metrics/: answer_relevancy.py  base_metric.py  bleu.py  cost_metric.py  coverage.py  faithfulness.py  geval.py  style_score.py  token_count.py
raft_eval/utils/: formatters.py  knowledge_base.py  llm_client.py  prompts.py  save_utils.py
